--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "test-app": "electron test-app.js",
     "test-settings": "electron test-settings-electron.js",
     "test-game": "electron test-game-electron.js",
+    "test-pixi": "electron test-pixi-integration.js",
+    "test-electron-pixi": "cross-env NODE_ENV=development electron test-electron-pixi.js",
     "build:game": "cross-env NODE_ENV=development webpack --config webpack.game.config.js",
     "build:game:prod": "cross-env NODE_ENV=production webpack --config webpack.game.config.js",
     "watch:game": "cross-env NODE_ENV=development webpack --config webpack.game.config.js --watch",
+    "build:pixi-test": "cross-env NODE_ENV=development webpack --config webpack.pixi-test.config.js",
+    "watch:pixi-test": "cross-env NODE_ENV=development webpack --config webpack.pixi-test.config.js --watch",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,scss}'"
   },
@@ -47,6 +51,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
@@ -71,6 +77,8 @@
     "dotenv-webpack": "^8.0.1",
     "electron": "^28.0.0",
     "electron-builder": "^24.4.0",
+    "electron-reloader": "^1.2.3",
+    "electron-squirrel-startup": "^1.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.0",
